force-app/main/default/objects/ASF_Case_Approv__c/ASF_Case_Approv__c.object-meta.xml
<CustomObject>
    <label>Case Request</label>
    <nameField>
        <label>Case Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Case Requests</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>