force-app/main/default/objects/ASF_Case_Approv__c/fields/Approval_Type__c.field-meta.xml
<CustomField>
    <fullName>Approval_Type__c</fullName>
    <label>Approval Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Parallel - All to approve</fullName>
                <default>true</default>
                <label>Parallel - All to approve</label>
            </value>
            <value>
                <fullName>Parallel - First to approve</fullName>
            </value>
            <value>
                <fullName>Sequential</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>