force-app/main/default/objects/ASF_Case_Approv__c/fields/Approver_01__c.field-meta.xml
<CustomField>
    <fullName>Approver_01__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approver 01</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SR_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>