force-app/main/default/objects/ASF_Case_Approv__c/fields/Approver_02__c.field-meta.xml
<CustomField>
    <fullName>Approver_02__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approver 02</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SR_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>