force-app/main/default/objects/ASF_Case_Approv__c/fields/Approver_03__c.field-meta.xml
<CustomField>
    <fullName>Approver_03__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approver 03</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SR_Requests2</relationshipName>
    <type>Lookup</type>
</CustomField>