force-app/main/default/objects/ASF_Case_Approv__c/fields/Approver_3_Matches__c.field-meta.xml
<CustomField>
    <fullName>Approver_3_Matches__c</fullName>
    <formula>IF(( Approver_01__c ) =( Approver_03__c ),True,False)</formula>
    <label>Approver 3 Matches</label>
    <type>Checkbox</type>
</CustomField>