force-app/main/default/objects/ASF_Case_Approv__c/fields/Case_Client_Code__c.field-meta.xml
<CustomField>
    <fullName>Case_Client_Code__c</fullName>
    <formula>SR__r.Client_Code__c</formula>
    <label>Case Client Code</label>
    <type>Text</type>
</CustomField>