force-app/main/default/objects/ASF_Case_Approv__c/fields/Case_RejectedStageMovement__c.field-meta.xml
<CustomField>
    <fullName>Case_RejectedStageMovement__c</fullName>
    <label>Case Rejected Stage Movement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>