force-app/main/default/objects/ASF_Case_Approv__c/fields/Case_Stage_At_Creation__c.field-meta.xml
<CustomField>
    <fullName>Case_Stage_At_Creation__c</fullName>
    <label>Case Stage At Creation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>