force-app/main/default/objects/ASF_Case_Approv__c/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <formula>SR__r.Account.Name</formula>
    <label>Customer Name</label>
    <type>Text</type>
</CustomField>