force-app/main/default/objects/ASF_Case_Approv__c/fields/Is_Gateway_Stage__c.field-meta.xml
<CustomField>
    <fullName>Is_Gateway_Stage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Gateway Stage</label>
    <type>Checkbox</type>
</CustomField>