force-app/main/default/objects/ASF_Case_Approv__c/fields/Is_Recategorization_Request__c.field-meta.xml
<CustomField>
    <fullName>Is_Recategorization_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Recategorization Request?</label>
    <type>Checkbox</type>
</CustomField>