force-app/main/default/objects/ASF_Case_Approv__c/fields/Nature__c.field-meta.xml
<CustomField>
    <fullName>Nature__c</fullName>
    <formula>Text(SR__r.Nature__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nature</label>
    <type>Text</type>
</CustomField>