force-app/main/default/objects/ASF_Case_Approv__c/fields/Overall_Case_Closure__c.field-meta.xml
<CustomField>
    <fullName>Overall_Case_Closure__c</fullName>
    <formula>SR__r.Overall_Case_Closure_SLA__c</formula>
    <label>Overall Case Closure</label>
    <type>DateTime</type>
</CustomField>