force-app/main/default/objects/ASF_Case_Approv__c/fields/Parent_Record_Id_For_Update__c.field-meta.xml
<CustomField>
    <fullName>Parent_Record_Id_For_Update__c</fullName>
    <label>Parent Record Id For Update</label>
    <length>20</length>
    <type>Text</type>
</CustomField>