force-app/main/default/objects/ASF_Case_Approv__c/fields/Recat_Approver_02__c.field-meta.xml
<CustomField>
    <fullName>Recat_Approver_02__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approver 02</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.Is_Recategorise_Approver__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>SR_Request_Recat_02</relationshipName>
    <type>Lookup</type>
</CustomField>