force-app/main/default/objects/ASF_Case_Approv__c/fields/RejectedFieldUpdates__c.field-meta.xml
<CustomField>
    <fullName>RejectedFieldUpdates__c</fullName>
    <label>RejectedFieldUpdates</label>
    <length>255</length>
    <type>Text</type>
</CustomField>