force-app/main/default/objects/ASF_Case_Approv__c/fields/Requested_CCC_Details__c.field-meta.xml
<CustomField>
    <fullName>Requested_CCC_Details__c</fullName>
    <label>Requested CCC Details</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>