force-app/main/default/objects/ASF_Case_Approv__c/fields/Requestor_Comments__c.field-meta.xml
<CustomField>
    <fullName>Requestor_Comments__c</fullName>
    <label>Requestor Comments</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>