force-app/main/default/objects/ASF_Case_Approv__c/fields/ShowApprover_2__c.field-meta.xml
<CustomField>
    <fullName>ShowApprover_2__c</fullName>
    <formula>If( (Approver_01__c  = Approver_02__c) || ISBLANK(Approver_02__c)  ,false,true)</formula>
    <label>ShowApprover 2</label>
    <type>Checkbox</type>
</CustomField>