force-app/main/default/objects/ASF_Case_Approv__c/fields/ShowApprover_3__c.field-meta.xml
<CustomField>
    <fullName>ShowApprover_3__c</fullName>
    <formula>IF( (Approver_01__c  = Approver_03__c) || ISBLANK(Approver_03__c) , false, true)</formula>
    <label>ShowApprover 3</label>
    <type>Checkbox</type>
</CustomField>