force-app/main/default/objects/ASF_Case_Approv__c/fields/ShowApprover_4__c.field-meta.xml
<CustomField>
    <fullName>ShowApprover_4__c</fullName>
    <formula>IF ( (Approver_01__c = Approver_04__c) || ISBLANK(Approver_04__c) ,false, true)</formula>
    <label>ShowApprover 4</label>
    <type>Checkbox</type>
</CustomField>