force-app/main/default/objects/ASF_Case_Approv__c/fields/SR__c.field-meta.xml
<CustomField>
    <fullName>SR__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case Number</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>SR Requests</relationshipLabel>
    <relationshipName>SR_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>