force-app/main/default/objects/ASF_Case_Approv__c/fields/SR_type__c.field-meta.xml
<CustomField>
    <fullName>SR_type__c</fullName>
    <formula>SR__r.Type_Text__c</formula>
    <label>Case Type</label>
    <type>Text</type>
</CustomField>