force-app/main/default/objects/ASF_Case_Approv__c/fields/SuccessFieldsUpdate__c.field-meta.xml
<CustomField>
    <fullName>SuccessFieldsUpdate__c</fullName>
    <label>SuccessFieldsUpdate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>