force-app/main/default/objects/ASF_Case_Approv__c/fields/SuccessStageMovement__c.field-meta.xml
<CustomField>
    <fullName>SuccessStageMovement__c</fullName>
    <label>Case Success Stage Movement</label>
    <length>100</length>
    <type>Text</type>
</CustomField>