force-app/main/default/objects/ASF_Case_Approv__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Approver_01__c</columns>
    <columns>Recat_Approver_01__c</columns>
    <columns>Approval_Status__c</columns>
    <columns>Case_Number__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>